--- a/StudyGuru.Application/StudyGuru.Application.csproj
+++ b/StudyGuru.Application/StudyGuru.Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\StudyGuru.Domain\StudyGuru.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
