--- a/StudyGuru.Infrastructure/StudyGuru.Infrastructure.csproj
+++ b/StudyGuru.Infrastructure/StudyGuru.Infrastructure.csproj
@@ -11,6 +11,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AWSSDK.Bedrock" Version="3.7.301.43" />
+      <PackageReference Include="AWSSDK.BedrockRuntime" Version="3.7.301.43" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     </ItemGroup>
 
