--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,11 @@ version: "3.8"
 
 services: 
   db:
-    image: postgres:latest
+    image: mcr.microsoft.com/mssql/server:2022-preview-ubuntu-22.04
     restart: always
     env_file:
-      - db.env
+      - ./db.env
     ports:
-      - 5432:5432
+      - "1433:1433"
+    volumes:
+      - ./mssqldata:/var/opt/mssql/data:rw
